--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学习记录追踪器</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://pan.baidu.com/api/js"></script>
-    <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk-6.16.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/github-api@latest/dist/GitHub.bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -64,6 +61,7 @@
             <p>© 2024 学习记录追踪器</p>
         </footer>
     </div>
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
