Update index.html and script.js to fix GitHub sync

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>© 2024 学习记录追踪器</p>
         </footer>
     </div>
-    <script src="config.js"></script>
-    <script src="script.js"></script>
+    <script src="config.js?v=1"></script>
+    <script src="script.js?v=1"></script>
 </body>
 </html> 
